Closed Bug 41786 Opened 26 years ago Closed 25 years ago

titlebar is blank (window manager issue)

Categories

(Core :: XUL, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: fosterd, Assigned: pavlov)

References

Details

(Keywords: platform-parity, regression, Whiteboard: [nsbeta2+][nsbeta3+])

Attachments

(1 file)

In 060620 on linux, the titlebar shows nothing at all. it looks like it might be set to a space, I can't really tell.
The titlebar on what? the browser itself? I don't see this.
Attached image missing titlebar text
Here's the problem: the WM_NAME property has changed its type from STRING to COMPOUND_TEXT: $ xprop # click on netscape [...] WM_NAME(STRING) = "Netscape: mozilla.org" $ xprop # click on mozilla [...] WM_NAME(COMPOUND_TEXT) = 0x6d, 0x6f, 0x7a, 0x69, 0x6c, 0x6c, 0x61, 0x2e, 0x6f, 0x72, 0x67, 0x20, 0x2d, 0x20, 0x4d, 0x6f, 0x7a, 0x69, 0x6c, 0x6c, 0x61 This is just the text in hex: $ perl -le 'print pack "H*" => "6d6f7a696c6c612e6f7267202d204d6f7a696c6c61"' mozilla.org - Mozilla Is there some reason we need COMPOUND_TEXT? is it for i18n? It doesn't seem to be well supported in window managers.
the attatchment above is twm, just so someone doesn't mark wfm after looking at it in another window manager.
Summary: titlebar is blank → titlebar is blank (window manager issue)
over to XPToolkit Widgets for a look.
Assignee: asa → trudelle
Status: UNCONFIRMED → NEW
Component: Browser-General → XP Toolkit/Widgets
Ever confirmed: true
QA Contact: doronr → jrgm
*** Bug 41852 has been marked as a duplicate of this bug. ***
linux-only
Keywords: pp
reassigning to pavlov as a regression from his checkin yesterday. nominating for nsbeta2. According to pav, twm is one of the more standards-compliant window managers, so if we have a problem with it, it may be a problem in our standards support.
Assignee: trudelle → pavlov
Keywords: nsbeta2, regression
The actual function that isn't working here is XFetchName from the X library, since it requires a STRING-type atom. This is the reccommended function to use for fetching a window's name (and twm uses it). Since the titlebar does work on some window managers, I suspect they are just calling XGetWindowProperty and dealing with the raw atom, and not checking its type. It's questionable where the bug *really* is here (I'm leaning towards XFetchName as the man page says the result is implementation-defined if the data returned by the server is not in a certain X-specific encoding of Latin-1), but I would reccommend using STRING if it is at all possible.
Putting on [nsbeta2+][w/b minus on 6/22] radar.
Whiteboard: [nsbeta2+][w/b minus on 6/22]
checked in fix
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
verified fixed; 2000062120 linux; works in enlightenment and twm
Status: RESOLVED → VERIFIED
This was just broken by the fix for bug 43108, checked in by tajima.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
add me to cc-list as I broke it again.
*** Bug 50323 has been marked as a duplicate of this bug. ***
nsbeta3+, p3 for M18
Keywords: nsbeta3
Whiteboard: [nsbeta2+][w/b minus on 6/22] → [nsbeta2+][nsbeta3+]
Target Milestone: --- → M18
this has been fixed again, we are just back to leaking
Status: REOPENED → RESOLVED
Closed: 26 years ago25 years ago
Resolution: --- → FIXED
decklin, is this fixed for you now? fwiw, looks fine to me using either enlightenment or afterstep (i don't have twm).
verifying fix
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: