fix for some window managers not setting the titlebar anymore.  nsbeta2+ bug 41786. r=bryner